--- a/public/templates/product-details.html
+++ b/public/templates/product-details.html
@@ -43,7 +43,7 @@
                 <tbody>
                     <tr ng-if="!noOrders" ng-repeat="order in productOrders">
                         <td>{{order.status === 'checkin' ? 'Checked In' : 'Checked Out'}}</td>
-                        <td><span class="label" ng-class="{'label-info': order.location === 'warehouse', 'label-warning': order.location !== 'warehouse'}">{{order.location | uppercase}}</span></td>
+                        <td><span class="label" ng-class="{'label-info': order.status === 'checkin', 'label-warning': order.status !== 'checkin'}">{{order.status === 'checkin' ? 'warehouse' : order.location | uppercase}}</span></td>
                         <td>{{order.updatedAt | date:'h:mma dd-MMM-yy'}}</td>
                     </tr>
                     <tr ng-if="noOrders">
