remove search from cases and products pages. fix how search works on the dashboard

--- a/public/templates/products.html
+++ b/public/templates/products.html
@@ -16,12 +16,12 @@
                             <div class="col-sm-8">
                                 <h3>Product List</h3>
                             </div>
-                            <div class="col-sm-4">
+                            <!--<div class="col-sm-4">
                                 <div class="input-group btn-block">
                                     <span class="input-group-addon" id="productSearch">Search Products:</span>
                                     <input type="text" class="form-control input-lg" placeholder="Product Lookup" aria-describedby="productSearch" ng-model="productSearchTerm" ng-change="productSearch()" ng-model-options="{ debounce: 500 }"></input>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                     <!-- /.box-header -->
