--- a/public/templates/cases.html
+++ b/public/templates/cases.html
@@ -16,12 +16,12 @@
                             <div class="col-sm-8">
                                 <h3>Case List</h3>
                             </div>
-                            <div class="col-sm-4">
+                            <!--<div class="col-sm-4">
                                 <div class="input-group btn-block">
                                     <span class="input-group-addon" id="caseSearch">Search Cases:</span>
                                     <input type="text" class="form-control input-lg" placeholder="Case Lookup" aria-describedby="caseSearch" ng-model="caseSearchTerm" ng-change="caseSearch()" ng-model-options="{ debounce: 500 }"></input>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                     <!-- /.box-header -->
