--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -29,7 +29,7 @@
                                 <tbody>
                                     <tr ng-if="!tableError" ng-repeat="order in orders">
                                         <td>{{order.assetTag}}</td>
-                                        <td>{{order.updatedAt | date:'HH:mm dd/MMM/yy'}}</td>
+                                        <td>{{order.updatedAt | date:'HH:mm dd-MMM-yy'}}</td>
                                         <td><span class="label" ng-class="{'label-info': order.status === 'checkin', 'label-warning': order.status !== 'checkin'}">{{order.status === 'checkin' ? 'Warehouse' : order.location | uppercase}}</span></td>
                                         <td>{{order.productName}}</td>
                                     </tr>
