--- a/public/templates/orders.html
+++ b/public/templates/orders.html
@@ -41,6 +41,7 @@
                                 <thead>
                                     <tr>
                                         <th><h4>Asset Tag</h4></th>
+                                        <th><h4>Asset Name</h4></th>
                                         <th><h4>Check In Location</h4></th>
                                         <th><h4>Check In Time</h4></th>
                                         <th><h4>Check Out Location</h4></th>
@@ -50,6 +51,7 @@
                                 <tbody>
                                     <tr ng-if="!tableError" ng-repeat="order in orders">
                                         <td>{{order.assetTag}}</td>
+                                        <td>{{order.productName}}</td>
                                         <td><span ng-if="order.checkInTime !== null" class="label label-info">WAREHOUSE</span></td>
                                         <td>{{order.checkInTime | date:'h:mma dd-MMM-yy'}}</td>
                                         <td><span class="label label-warning">{{order.location | uppercase}}</span></td>
